--- a/src/app/components/educacion/educacion.component.html
+++ b/src/app/components/educacion/educacion.component.html
@@ -5,12 +5,11 @@
     <button class="boton-add" type="button">
         <i class="bi bi-plus-square fs-3 ms-5"></i>
     </button>
-    
 
     <span class="line"></span>
 
     <div class="row justify-content-center align-items-center ms-2 me-2">
-    <div class="card col-12 mb-3 p-sm-4 p-1" *ngFor="let Educacion of educacion">
+        <div class="card col-12 mb-3 p-sm-4 p-1" *ngFor="let Educacion of educacion">
             <div class="row">
                 <div class="col-md-3 d-flex justify-content-center align-items-center">
                     <img [src]="Educacion.urllogoinst" class="img-fluid rounded-start" alt="...">
@@ -19,16 +18,18 @@
                     <div class="card-body">
                         <h3 class="card-title d-inline-block mb-3"> {{Educacion.institucion}} </h3>
                         <!-- Botón edición Experiencia -->
-                    <button class="boton-edit" type="button">
-                        <i class="bi bi-pencil-square fs-5"></i>
-                    </button>
-                    <!-- Botón eliminar Experiencia -->
-                    <button class="boton-delete" type="button" (click)="deleteEducacion(Educacion.id)">
-                        <i class="bi bi-x-square fs-5"></i>
-                    </button>
-                        
-                        <h4 class="card-subtitle mb-4" >
-                            <time> {{Educacion.fechainicio}} </time>&nbsp; - &nbsp; <time> {{Educacion.fechafin}} </time>
+                        <button class="boton-edit" type="button" *ngIf="isLogged"
+                            routerLink="/editEducacion/{{Educacion.id}}">
+                            <i class="bi bi-pencil-square fs-5"></i>
+                        </button>
+                        <!-- Botón eliminar Experiencia -->
+                        <button class="boton-delete" type="button" *ngIf="isLogged"
+                            (click)="deleteEducacion(Educacion.id)">
+                            <i class="bi bi-x-square fs-5"></i>
+                        </button>
+                        <h4 class="card-subtitle mb-4">
+                            <time> {{Educacion.fechainicio}} </time>&nbsp; - &nbsp; <time> {{Educacion.fechafin}}
+                            </time>
                         </h4>
                         <h4 class="card-text">
                             {{Educacion.carrera}}
@@ -40,7 +41,4 @@
             </div>
         </div>
     </div>
-
-        
-    
 </section>
